# learning_ros_ws

./: .gitignore  README.md  novel1.txt  novel2.txt  novel3.txt
src/learning_srv/: CMakeLists.txt  package.xml
src/learning_srv/launch/: actions.launch.py  turtle_control.launch.py
src/learning_srv/scripts/: face_detect_client_node.py  face_detect_node.py  learn_face_detect.py
src/learning_srv/src/: patrol_tut_client.cpp  patrol_tut_server.cpp
src/learning_srv/srv/: FaceDetector.srv  Patrol.srv
src/learning_tf/: CMakeLists.txt  package.xml
src/learning_tf/scripts/: dynamic_tf_broadcaster.py  static_tf_broadcaster.py  tf_listener.py
src/learning_tf/src/: dynamic_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf_listener.cpp
src/learning_thread_cpp/: CMakeLists.txt  package.xml
src/learning_thread_cpp/src/: learning_thread.cpp
src/learning_thread_py/: package.xml  setup.cfg  setup.py
src/learning_thread_py/learning_thread_py/: learning_thread.py
src/learning_topic_cpp/: CMakeLists.txt  package.xml
src/learning_topic_cpp/src/: turtle_circle.cpp  turtle_control.cpp
src/learning_topic_py/: package.xml  setup.cfg  setup.py
src/learning_topic_py/learning_topic_py/: novel_pub.py  novel_sub.py
src/learning_topic_py/test/: Template.py
src/my_navigation/: CMakeLists.txt  package.xml
src/my_navigation/config/: display_robot_config.rviz  fishbot_ros2_controller.yaml
src/my_navigation/launch/: display_robot.launch.py
src/my_navigation/urdf/: first_robot.urdf  first_robot.xacro
src/my_navigation/urdf/fishbot/: base.urdf.xacro  fishbot.urdf.xacro
src/my_navigation/urdf/fishbot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
src/my_navigation/urdf/fishbot/plugins/: gazebo_sensor_plugin.xacro
src/my_navigation/urdf/fishbot/sensor/: camera.urdf.xacro  laser.urdf.xacro
src/my_navigation/world/room/: model.sdf
src/mybot_description/: CMakeLists.txt  package.xml
src/mybot_description/config/: fishbot_ros2_controller.yaml
src/mybot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
src/mybot_description/urdf/: fish_robot_AIgen.xacro
src/mybot_description/urdf/fishbot/: fishbot.ros2_control.xacro  fishbot.urdf.xacro
src/mybot_description/urdf/fishbot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
src/mybot_description/urdf/fishbot/sensor/: imu.urdf.xacro
src/mybot_description/world/: custom_room.world
src/recording_package/: README.md  package.xml  setup.cfg  setup.py
src/recording_package/launch/: video_recorder.launch.py
src/recording_package/recording_package/: recording_test_client.py  video_recorder.py
src/topic_practice/: CMakeLists.txt  package.xml
src/topic_practice/msg/: SystemStatus.msg
src/topic_practice/scripts/: sys_status_pub.py
src/topic_practice/src/: hello_qt.cpp  sys_status_display.cpp
