<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>learning_srv</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="robot007@todo.todo">robot007</maintainer>
  <license>Apache-2.0</license>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ament_index_python</depend> <!--py节点获取文件路径-->
  <depend>ament_index_cpp</depend> <!--cpp节点获取文件路径-->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>turtlesim</depend>
  <depend>rcl_interfaces</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
